sm8250-common: parts: Implement dc dimming
Squash of the following commits:
- parts: Move dc dimming to Settings > Display
- parts: Implement dc dimming preference
- parts: Disable dc dimming if it's not supported
- parts: Add DC-Dimming QS tile
- sepolicy: Address DC Dimming denial

Co-authored-by: Arian <arian.kulmer@web.de>
Change-Id: I048371e23c68eae199b429169866af864cc03daf
Signed-off-by: Carlos Ayrton Lopez Arroyo <15030201@itcelaya.edu.mx>

--- a/parts/res/values/strings.xml
+++ b/parts/res/values/strings.xml
@@ -44,4 +44,9 @@
     <!-- Touch Responsiveness -->
     <string name="htsr_enable_title">Increase Touch Responsiveness</string>
     <string name="htsr_enable_summary">Increases touch polling rate to decrease latency</string>
+
+    <!-- DC dimming settings -->
+    <string name="dc_dimming_enable_title">DC Dimming</string>
+    <string name="dc_dimming_enable_summary">Reduces eye strain in low light conditions</string>
+    <string name="dc_dimming_enable_summary_not_supported">DC Dimming is currently not supported by the kernel</string>
 </resources>
