--- a/parts/res/values/strings.xml
+++ b/parts/res/values/strings.xml
@@ -60,6 +60,7 @@
     <string name="hbm_enable_summary_not_supported">HBM is not currently supported by the kernel</string>
 
     <!-- Dirac settings -->
+    <string name="dirac_enable">Enable dirac</string>
     <string name="dirac_title">Dirac sound enhancer</string>
     <string name="dirac_summary">Optimize sound quality with Dirac, Hi-Fi</string>
     <string name="dirac_headset_title">Headset type</string>
